packages/lodepng_flutter/lib/lodepng_flutter_bindings_generated.dart


  /// Whether a gAMA chunk is present (0 = not present, 1 = present).
  @ffi.UnsignedInt()
  external int gama_defined;

  /// Gamma exponent times 100000
  @ffi.UnsignedInt()
  external int gama_gamma;

  /// Whether a cHRM chunk is present (0 = not present, 1 = present).
  @ffi.UnsignedInt()
  external int chrm_defined;

  /// White Point x times 100000
  @ffi.UnsignedInt()
  external int chrm_white_x;

  /// White Point y times 100000
  @ffi.UnsignedInt()
  external int chrm_white_y;

  /// Red x times 100000
  @ffi.UnsignedInt()
  external int chrm_red_x;

  /// Red y times 100000
  @ffi.UnsignedInt()
  external int chrm_red_y;

  /// Green x times 100000
  @ffi.UnsignedInt()
  external int chrm_green_x;

  /// Green y times 100000
  @ffi.UnsignedInt()
  external int chrm_green_y;

  /// Blue x times 100000
  @ffi.UnsignedInt()
  external int chrm_blue_x;

  /// Blue y times 100000
  @ffi.UnsignedInt()
  external int chrm_blue_y;

  /// Whether an sRGB chunk is present (0 = not present, 1 = present).
  @ffi.UnsignedInt()
  external int srgb_defined;

  /// Rendering intent: 0=perceptual, 1=rel. colorimetric, 2=saturation, 3=abs. colorimetric
  @ffi.UnsignedInt()
  external int srgb_intent;

  /// Whether an iCCP chunk is present (0 = not present, 1 = present).
  @ffi.UnsignedInt()
  external int iccp_defined;

  /// Null terminated string with profile name, 1-79 bytes
  external ffi.Pointer<ffi.Char> iccp_name;

  /// The ICC profile in iccp_profile_size bytes.
  /// Don't allocate this buffer yourself. Use the init/cleanup functions
  /// correctly and use lodepng_set_icc and lodepng_clear_icc.
  external ffi.Pointer<ffi.UnsignedChar> iccp_profile;

  /// The size of iccp_profile in bytes
  @ffi.UnsignedInt()
  external int iccp_profile_size;

  /// is significant bits given? if not, the values below are unused
  @ffi.UnsignedInt()
  external int sbit_defined;

  /// red or gray component of significant bits
  @ffi.UnsignedInt()
  external int sbit_r;

  /// green component of significant bits
  @ffi.UnsignedInt()
  external int sbit_g;

  /// blue component of significant bits
  @ffi.UnsignedInt()
  external int sbit_b;

  /// alpha component of significant bits
  @ffi.UnsignedInt()
  external int sbit_a;

  /// unknown chunks: chunks not known by LodePNG, passed on byte for byte.
  ///
  /// There are 3 buffers, one for each position in the PNG where unknown chunks can appear.
  /// Each buffer contains all unknown chunks for that position consecutively.
  /// The 3 positions are:
  /// 0: between IHDR and PLTE, 1: between PLTE and IDAT, 2: between IDAT and IEND.
  ///
  /// For encoding, do not store critical chunks or known chunks that are enabled with a "_defined" flag
  /// above in here, since the encoder will blindly follow this and could then encode an invalid PNG file
  /// (such as one with two IHDR chunks or the disallowed combination of sRGB with iCCP). But do use
  /// this if you wish to store an ancillary chunk that is not supported by LodePNG (such as sPLT or hIST),
  /// or any non-standard PNG chunk.
  ///
  /// Do not allocate or traverse this data yourself. Use the chunk traversing functions declared
  /// later, such as lodepng_chunk_next and lodepng_chunk_append, to read/write this struct.
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Pointer<ffi.UnsignedChar>> unknown_chunks_data;

  /// size in bytes of the unknown chunks, given for protection
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Size> unknown_chunks_size;
}

/// Settings for the decoder. This contains settings for the PNG and the Zlib
/// decoder, but not the Info settings from the Info structs.
final class LodePNGDecoderSettings extends ffi.Struct {
  /// in here is the setting to ignore Adler32 checksums
  external LodePNGDecompressSettings zlibsettings;

  /// ignore CRC checksums
  @ffi.UnsignedInt()
  external int ignore_crc;

  /// ignore unknown critical chunks
  @ffi.UnsignedInt()
  external int ignore_critical;

  /// ignore issues at end of file if possible (missing IEND chunk, too large chunk, ...)
  @ffi.UnsignedInt()
  external int ignore_end;

  /// whether to convert the PNG to the color type you want. Default: yes
  @ffi.UnsignedInt()
  external int color_convert;

  /// if false but remember_unknown_chunks is true, they're stored in the unknown chunks
  @ffi.UnsignedInt()
  external int read_text_chunks;

  /// store all bytes from unknown chunks in the LodePNGInfo (off by default, useful for a png editor)
  @ffi.UnsignedInt()
  external int remember_unknown_chunks;

  /// maximum size for decompressed text chunks. If a text chunk's text is larger than this, an error is returned,
  /// unless reading text chunks is disabled or this limit is set higher or disabled. Set to 0 to allow any size.
  /// By default it is a value that prevents unreasonably large strings from hogging memory.
  @ffi.Size()
  external int max_text_size;

  /// maximum size for compressed ICC chunks. If the ICC profile is larger than this, an error will be returned. Set to
  /// 0 to allow any size. By default this is a value that prevents ICC profiles that would be much larger than any
  /// legitimate profile could be to hog memory.
  @ffi.Size()
  external int max_icc_size;
}

/// automatically use color type with less bits per pixel if losslessly possible. Default: AUTO
abstract class LodePNGFilterStrategy {
  /// every filter at zero
  static const int LFS_ZERO = 0;

  /// every filter at 1, 2, 3 or 4 (paeth), unlike LFS_ZERO not a good choice, but for testing
  static const int LFS_ONE = 1;
  static const int LFS_TWO = 2;
  static const int LFS_THREE = 3;
  static const int LFS_FOUR = 4;

  /// Use filter that gives minimum sum, as described in the official PNG filter heuristic.
  static const int LFS_MINSUM = 5;

  /// Use the filter type that gives smallest Shannon entropy for this scanline. Depending
  /// on the image, this is better or worse than minsum.
  static const int LFS_ENTROPY = 6;

  /// Brute-force-search PNG filters by compressing each filter for each scanline.
  /// Experimental, very slow, and only rarely gives better compression than MINSUM.
  static const int LFS_BRUTE_FORCE = 7;

  /// use predefined_filters buffer: you specify the filter type for each scanline
  static const int LFS_PREDEFINED = 8;
}

/// Gives characteristics about the integer RGBA colors of the image (count, alpha channel usage, bit depth, ...),
/// which helps decide which color model to use for encoding.
/// Used internally by default if "auto_convert" is enabled. Public because it's useful for custom algorithms.
final class LodePNGColorStats extends ffi.Struct {
  /// not grayscale
  @ffi.UnsignedInt()
  external int colored;

  /// image is not opaque and color key is possible instead of full alpha
  @ffi.UnsignedInt()
  external int key;

  /// key values, always as 16-bit, in 8-bit case the byte is duplicated, e.g. 65535 means 255
  @ffi.UnsignedShort()
  external int key_r;

  @ffi.UnsignedShort()
  external int key_g;

  @ffi.UnsignedShort()
  external int key_b;

  /// image is not opaque and alpha channel or alpha palette required
  @ffi.UnsignedInt()
  external int alpha;

  /// amount of colors, up to 257. Not valid if bits == 16 or allow_palette is disabled.
  @ffi.UnsignedInt()
  external int numcolors;

  /// Remembers up to the first 256 RGBA colors, in no particular order, only valid when numcolors is valid
  @ffi.Array.multi([1024])
  external ffi.Array<ffi.UnsignedChar> palette;

  /// bits per channel (not for palette). 1,2 or 4 for grayscale only. 16 if 16-bit per channel required.
  @ffi.UnsignedInt()
  external int bits;

  @ffi.Size()
  external int numpixels;

  /// default 1. if 0, disallow choosing palette colortype in auto_choose_color, and don't count numcolors
  @ffi.UnsignedInt()
  external int allow_palette;

  /// default 1. if 0, choose RGB or RGBA even if the image only has gray colors
  @ffi.UnsignedInt()
  external int allow_greyscale;
}

/// Settings for the encoder.
final class LodePNGEncoderSettings extends ffi.Struct {
  /// settings for the zlib encoder, such as window size, ...
  external LodePNGCompressSettings zlibsettings;

  /// automatically choose output PNG color type. If false, must explicitely choose the output color
  /// type in state.info_png.color.colortype, info_png.color.bitdepth and optionally its palette.
  /// Default: true
  @ffi.UnsignedInt()
  external int auto_convert;

  /// If true, follows the official PNG heuristic: if the PNG uses a palette or lower than
  /// 8 bit depth, set all filters to zero. Otherwise use the filter_strategy. Note that to
  /// completely follow the official PNG heuristic, filter_palette_zero must be true and
  /// filter_strategy must be LFS_MINSUM
  @ffi.UnsignedInt()
  external int filter_palette_zero;

  /// Which filter strategy to use when not using zeroes due to filter_palette_zero.
  /// Set filter_palette_zero to 0 to ensure always using your chosen strategy. Default: LFS_MINSUM
  @ffi.Int32()
  external int filter_strategy;

  /// used if filter_strategy is LFS_PREDEFINED. In that case, this must point to a buffer with
  /// the same length as the amount of scanlines in the image, and each value must <= 5. You
  /// have to cleanup this buffer, LodePNG will never free it. Don't forget that filter_palette_zero
  /// must be set to 0 to ensure this is also used on palette or low bitdepth images.
  external ffi.Pointer<ffi.UnsignedChar> predefined_filters;

  /// force creating a PLTE chunk if colortype is 2 or 6 (= a suggested palette).
  /// If colortype is 3, PLTE is always created. If color type is explicitely set
  /// to a grayscale type (1 or 4), this is not done and is ignored. If enabling this,
  /// a palette must be present in the info_png.
  /// NOTE: enabling this may worsen compression if auto_convert is used to choose
  /// optimal color mode, because it cannot use grayscale color modes in this case
  @ffi.UnsignedInt()
  external int force_palette;

  /// add LodePNG identifier and version as a text chunk, for debugging
  @ffi.UnsignedInt()
  external int add_id;

  /// encode text chunks as zTXt chunks instead of tEXt chunks, and use compression in iTXt chunks
  @ffi.UnsignedInt()
  external int text_compression;
}

/// The settings, state and information for extended encoding and decoding.
final class LodePNGState extends ffi.Struct {
  /// the decoding settings
  external LodePNGDecoderSettings decoder;

  /// the encoding settings
  external LodePNGEncoderSettings encoder;

  /// specifies the format in which you would like to get the raw pixel buffer
  external LodePNGColorMode info_raw;

  /// info of the PNG image obtained after decoding
  external LodePNGInfo info_png;

  @ffi.UnsignedInt()
  external int error;
}
